build: support Realm local DB on AGP 9